appId: "${APP_ID}"
name: "verificationEmlpoyementTestFlow"
# Suite: VerificationEmlpoyement
# Consolidated test flow for VerificationEmlpoyement screen
# Contains 25 test case(s):
---
- launchApp: {}
- runFlow:
    file: "common/scrollUntilVisibleAndWait.yaml"
    env:
      WIDGET_ID: "button-IntroductionFirstScreen_Cta_Login_Button"
- runFlow:
    file: "common/tapAndWait.yaml"
    env:
      WIDGET_ID: "button-IntroductionFirstScreen_Cta_Login_Button"
- runFlow:
    file: "common/assertScreenVisibleAndWait.yaml"
    env:
      WIDGET_ID: "00571aad-bed9-46f5-991e-94d0805872a7"
    optional: true
- runFlow:
    file: "common/scrollUntilVisibleAndWait.yaml"
    env:
      WIDGET_ID: "button-LoginScreen_Cta_Login_Button"
- runFlow:
    file: "common/tapAndWait.yaml"
    env:
      WIDGET_ID: "button-LoginScreen_Cta_Login_Button"
- runFlow:
    file: "common/assertScreenVisibleAndWait.yaml"
    env:
      WIDGET_ID: "68526003-8aad-4122-8991-06771f332513"
    optional: true
- runFlow:
    file: "common/scrollUntilVisibleAndWait.yaml"
    env:
      WIDGET_ID: "button-HomeLite_Cta_Open_Button"
- runFlow:
    file: "common/tapAndWait.yaml"
    env:
      WIDGET_ID: "button-HomeLite_Cta_Open_Button"
- runFlow:
    file: "common/assertScreenVisibleAndWait.yaml"
    env:
      WIDGET_ID: "a2d65a31-9542-4b7e-9228-c730e6669899"
    optional: true
- runFlow:
    file: "common/scrollUntilVisibleAndWait.yaml"
    env:
      WIDGET_ID: "button-EligibilityRequirement_Cta_Continue_Button"
- runFlow:
    file: "common/tapAndWait.yaml"
    env:
      WIDGET_ID: "button-EligibilityRequirement_Cta_Continue_Button"
- runFlow:
    file: "common/assertScreenVisibleAndWait.yaml"
    env:
      WIDGET_ID: "aa76eab4-8026-480a-ba2a-91e5336db92c"
    optional: true
- runFlow:
    file: "common/scrollUntilVisibleAndWait.yaml"
    env:
      WIDGET_ID: "button-DataClasificationOpenAccount_Cta_LetSstart_Button"
- runFlow:
    file: "common/tapAndWait.yaml"
    env:
      WIDGET_ID: "button-DataClasificationOpenAccount_Cta_LetSstart_Button"
- runFlow:
    file: "common/assertScreenVisibleAndWait.yaml"
    env:
      WIDGET_ID: "2fa9b715-f553-440b-bf7d-519f8a12e053"
    optional: true
- runFlow:
    file: "common/scrollUntilVisibleAndWait.yaml"
    env:
      WIDGET_ID: "button-IdentityIdcardPhoto_Cta_Continue_Button"
- runFlow:
    file: "common/tapAndWait.yaml"
    env:
      WIDGET_ID: "button-IdentityIdcardPhoto_Cta_Continue_Button"
- runFlow:
    file: "common/assertScreenVisibleAndWait.yaml"
    env:
      WIDGET_ID: "c6323571-23da-4d1c-b075-a967be93ca2e"
    optional: true
- runFlow:
    file: "common/scrollUntilVisibleAndWait.yaml"
    env:
      WIDGET_ID: "button-VerificationAddress_Cta_Continue_Button"
- runFlow:
    file: "common/tapAndWait.yaml"
    env:
      WIDGET_ID: "button-VerificationAddress_Cta_Continue_Button"
- runFlow:
    file: "common/assertScreenVisibleAndWait.yaml"
    env:
      WIDGET_ID: "4c82546c-8aaf-4f78-8200-069e6ed2a930"
    optional: true
- runFlow:
    file: "common/scrollUntilVisibleAndWait.yaml"
    env:
      WIDGET_ID: "button-VerificationSelfie_Cta_Continue_Button"
- runFlow:
    file: "common/tapAndWait.yaml"
    env:
      WIDGET_ID: "button-VerificationSelfie_Cta_Continue_Button"
- runFlow:
    file: "common/assertScreenVisibleAndWait.yaml"
    env:
      WIDGET_ID: "cd9257f4-7a06-4f8c-8188-56407a5f55a8"
    optional: true
- runFlow:
    file: "common/scrollUntilVisibleAndWait.yaml"
    env:
      WIDGET_ID: "button-VerificationDetails_Cta_Continue_Button"
- runFlow:
    file: "common/tapAndWait.yaml"
    env:
      WIDGET_ID: "button-VerificationDetails_Cta_Continue_Button"
- runFlow:
    file: "common/assertScreenVisibleAndWait.yaml"
    env:
      WIDGET_ID: "9c49d4f7-740d-4930-9602-4131b3e63c76"
    optional: true
# 1. Verify widget ASAppBar:VerificationEmlpoyement_AppBar_AppBarAsappHeader_AppBar is displayed on the screen: Verifies that the widget:VerificationEmlpoyement_AppBar_AppBarAsappHeader_AppBar renders properly and is visible to the user.
- runFlow:
    file: "common/assertVisibleAndWait.yaml"
    env:
      WIDGET_ID: "title-VerificationEmlpoyement_AppBar_AppBarAsappHeader_AppBar"
- waitForAnimationToEnd: {}
# 2. Verify widget ASAppBar:VerificationEmlpoyement_AppBar_AppBarAsappHeader_AppBar is displayed on the screen: Verifies that the label of widget:VerificationEmlpoyement_AppBar_AppBarAsappHeader_AppBar appears correctly and is readable.
- runFlow:
    file: "common/scrollUntilVisibleAndWait.yaml"
    env:
      WIDGET_ID: "title-VerificationEmlpoyement_AppBar_AppBarAsappHeader_AppBar"
- runFlow:
    file: "common/assertVisibleAndWait.yaml"
    env:
      WIDGET_ID: "title-VerificationEmlpoyement_AppBar_AppBarAsappHeader_AppBar"
- waitForAnimationToEnd: {}
# 3. Verify widget ASText:VerificationEmlpoyement_Label_AboutYou_Text is displayed on the screen: Verifies that the widget:VerificationEmlpoyement_Label_AboutYou_Text renders properly and is visible to the user.
- runFlow:
    file: "common/assertVisibleAndWait.yaml"
    env:
      WIDGET_ID: "VerificationEmlpoyement_Label_AboutYou_Text"
- waitForAnimationToEnd: {}
# 4. Verify widget ASText:VerificationEmlpoyement_Label_AboutYou_Text is displayed on the screen: Verifies that the label of widget:VerificationEmlpoyement_Label_AboutYou_Text appears correctly and is readable.
- runFlow:
    file: "common/scrollUntilVisibleAndWait.yaml"
    env:
      WIDGET_ID: "VerificationEmlpoyement_Label_AboutYou_Text"
- runFlow:
    file: "common/assertVisibleAndWait.yaml"
    env:
      WIDGET_ID: "VerificationEmlpoyement_Label_AboutYou_Text"
- waitForAnimationToEnd: {}
# 5. Verify widget ASProgressBar:VerificationEmlpoyement_Container_ProgressBarAsp_ProgressBar is displayed on the screen: Verifies that the widget:VerificationEmlpoyement_Container_ProgressBarAsp_ProgressBar renders properly and is visible to the user.
- runFlow:
    file: "common/assertVisibleAndWait.yaml"
    env:
      WIDGET_ID: "VerificationEmlpoyement_Container_ProgressBarAsp_ProgressBar"
- waitForAnimationToEnd: {}
# 6. Verify widget ASText:VerificationEmlpoyement_Label_EmploymentDetails_Text is displayed on the screen: Verifies that the widget:VerificationEmlpoyement_Label_EmploymentDetails_Text renders properly and is visible to the user.
- runFlow:
    file: "common/assertVisibleAndWait.yaml"
    env:
      WIDGET_ID: "VerificationEmlpoyement_Label_EmploymentDetails_Text"
- waitForAnimationToEnd: {}
# 7. Verify widget ASText:VerificationEmlpoyement_Label_EmploymentDetails_Text is displayed on the screen: Verifies that the label of widget:VerificationEmlpoyement_Label_EmploymentDetails_Text appears correctly and is readable.
- runFlow:
    file: "common/scrollUntilVisibleAndWait.yaml"
    env:
      WIDGET_ID: "VerificationEmlpoyement_Label_EmploymentDetails_Text"
- runFlow:
    file: "common/assertVisibleAndWait.yaml"
    env:
      WIDGET_ID: "VerificationEmlpoyement_Label_EmploymentDetails_Text"
- waitForAnimationToEnd: {}
# 8. Verify widget ASText:VerificationEmlpoyement_Label_TellUsMoreAboutWhatYouDo_Text is displayed on the screen: Verifies that the widget:VerificationEmlpoyement_Label_TellUsMoreAboutWhatYouDo_Text renders properly and is visible to the user.
- runFlow:
    file: "common/assertVisibleAndWait.yaml"
    env:
      WIDGET_ID: "VerificationEmlpoyement_Label_TellUsMoreAboutWhatYouDo_Text"
- waitForAnimationToEnd: {}
# 9. Verify widget ASText:VerificationEmlpoyement_Label_TellUsMoreAboutWhatYouDo_Text is displayed on the screen: Verifies that the label of widget:VerificationEmlpoyement_Label_TellUsMoreAboutWhatYouDo_Text appears correctly and is readable.
- runFlow:
    file: "common/scrollUntilVisibleAndWait.yaml"
    env:
      WIDGET_ID: "VerificationEmlpoyement_Label_TellUsMoreAboutWhatYouDo_Text"
- runFlow:
    file: "common/assertVisibleAndWait.yaml"
    env:
      WIDGET_ID: "VerificationEmlpoyement_Label_TellUsMoreAboutWhatYouDo_Text"
- waitForAnimationToEnd: {}
# 10. Verify widget ASDropDown:VerificationEmlpoyement_Container_DropdownFieldAsdr_DropDown is displayed on the screen: Verifies that the widget:VerificationEmlpoyement_Container_DropdownFieldAsdr_DropDown renders properly and is visible to the user.
- runFlow:
    file: "common/assertVisibleAndWait.yaml"
    env:
      WIDGET_ID: "dropdown-VerificationEmlpoyement_Container_DropdownFieldAsdr_DropDown"
- waitForAnimationToEnd: {}
# 11. Verify widget ASDropDown:VerificationEmlpoyement_Container_DropdownFieldAsdr_DropDown functionalities: Verifies that dropdown widget:VerificationEmlpoyement_Container_DropdownFieldAsdr_DropDown opens correctly and allows selecting an option.
- runFlow:
    file: "common/scrollUntilVisibleAndWait.yaml"
    env:
      WIDGET_ID: "dropdown-VerificationEmlpoyement_Container_DropdownFieldAsdr_DropDown"
- runFlow:
    file: "common/assertVisibleAndWait.yaml"
    env:
      WIDGET_ID: "dropdown-VerificationEmlpoyement_Container_DropdownFieldAsdr_DropDown"
- runFlow:
    file: "common/selectDropdownAndWait.yaml"
    env:
      WIDGET_ID: "dropdown-VerificationEmlpoyement_Container_DropdownFieldAsdr_DropDown"
      OPTION_VALUE: "option"
    optional: true
- tapOn:
    point: "50%,50%"
- waitForAnimationToEnd: {}
# 12. Verify widget ASDropDown:VerificationEmlpoyement_Container_DropdownFieldAsdr_DropDo_2 is displayed on the screen: Verifies that the widget:VerificationEmlpoyement_Container_DropdownFieldAsdr_DropDo_2 renders properly and is visible to the user.
- runFlow:
    file: "common/assertVisibleAndWait.yaml"
    env:
      WIDGET_ID: "dropdown-VerificationEmlpoyement_Container_DropdownFieldAsdr_DropDo_2"
- waitForAnimationToEnd: {}
# 13. Verify widget ASDropDown:VerificationEmlpoyement_Container_DropdownFieldAsdr_DropDo_2 functionalities: Verifies that dropdown widget:VerificationEmlpoyement_Container_DropdownFieldAsdr_DropDo_2 opens correctly and allows selecting an option.
- runFlow:
    file: "common/scrollUntilVisibleAndWait.yaml"
    env:
      WIDGET_ID: "dropdown-VerificationEmlpoyement_Container_DropdownFieldAsdr_DropDo_2"
- runFlow:
    file: "common/assertVisibleAndWait.yaml"
    env:
      WIDGET_ID: "dropdown-VerificationEmlpoyement_Container_DropdownFieldAsdr_DropDo_2"
- runFlow:
    file: "common/selectDropdownAndWait.yaml"
    env:
      WIDGET_ID: "dropdown-VerificationEmlpoyement_Container_DropdownFieldAsdr_DropDo_2"
      OPTION_VALUE: "option"
    optional: true
- tapOn:
    point: "50%,50%"
- waitForAnimationToEnd: {}
# 14. Verify widget ASTextField:VerificationEmlpoyement_Input_NameOfEmployerCompany_Input is displayed on the screen: Verifies that the widget:VerificationEmlpoyement_Input_NameOfEmployerCompany_Input renders properly and is visible to the user.
- runFlow:
    file: "common/assertVisibleAndWait.yaml"
    env:
      WIDGET_ID: "view-VerificationEmlpoyement_Input_NameOfEmployerCompany_Input"
- waitForAnimationToEnd: {}
# 15. Verify widget ASTextField:VerificationEmlpoyement_Input_NameOfEmployerCompany_Input functionalities: Verifies that input widget:VerificationEmlpoyement_Input_NameOfEmployerCompany_Input accepts valid input, handles long text, and supports special characters.
- runFlow:
    file: "common/scrollUntilVisibleAndWait.yaml"
    env:
      WIDGET_ID: "view-VerificationEmlpoyement_Input_NameOfEmployerCompany_Input"
- runFlow:
    file: "common/assertVisibleAndWait.yaml"
    env:
      WIDGET_ID: "view-VerificationEmlpoyement_Input_NameOfEmployerCompany_Input"
- runFlow:
    file: "common/inputTextAndWait.yaml"
    env:
      WIDGET_ID: "textInput-VerificationEmlpoyement_Input_NameOfEmployerCompany_Input"
      TEXT_VALUE: "test value"
- pressKey: "Enter"
- runFlow:
    file: "common/eraseTextAndWait.yaml"
    env:
      WIDGET_ID: "view-VerificationEmlpoyement_Input_NameOfEmployerCompany_Input"
- runFlow:
    file: "common/inputTextAndWait.yaml"
    env:
      WIDGET_ID: "textInput-VerificationEmlpoyement_Input_NameOfEmployerCompany_Input"
      TEXT_VALUE: "test value"
- pressKey: "Enter"
- runFlow:
    file: "common/eraseTextAndWait.yaml"
    env:
      WIDGET_ID: "view-VerificationEmlpoyement_Input_NameOfEmployerCompany_Input"
- runFlow:
    file: "common/inputTextAndWait.yaml"
    env:
      WIDGET_ID: "textInput-VerificationEmlpoyement_Input_NameOfEmployerCompany_Input"
      TEXT_VALUE: "test value"
- pressKey: "Enter"
- runFlow:
    file: "common/eraseTextAndWait.yaml"
    env:
      WIDGET_ID: "view-VerificationEmlpoyement_Input_NameOfEmployerCompany_Input"
- waitForAnimationToEnd: {}
# 16. Verify widget ASDropDown:VerificationEmlpoyement_Container_DropdownFieldAsdr_DropDo_3 is displayed on the screen: Verifies that the widget:VerificationEmlpoyement_Container_DropdownFieldAsdr_DropDo_3 renders properly and is visible to the user.
- runFlow:
    file: "common/assertVisibleAndWait.yaml"
    env:
      WIDGET_ID: "dropdown-VerificationEmlpoyement_Container_DropdownFieldAsdr_DropDo_3"
- waitForAnimationToEnd: {}
# 17. Verify widget ASDropDown:VerificationEmlpoyement_Container_DropdownFieldAsdr_DropDo_3 functionalities: Verifies that dropdown widget:VerificationEmlpoyement_Container_DropdownFieldAsdr_DropDo_3 opens correctly and allows selecting an option.
- runFlow:
    file: "common/scrollUntilVisibleAndWait.yaml"
    env:
      WIDGET_ID: "dropdown-VerificationEmlpoyement_Container_DropdownFieldAsdr_DropDo_3"
- runFlow:
    file: "common/assertVisibleAndWait.yaml"
    env:
      WIDGET_ID: "dropdown-VerificationEmlpoyement_Container_DropdownFieldAsdr_DropDo_3"
- runFlow:
    file: "common/selectDropdownAndWait.yaml"
    env:
      WIDGET_ID: "dropdown-VerificationEmlpoyement_Container_DropdownFieldAsdr_DropDo_3"
      OPTION_VALUE: "option"
    optional: true
- tapOn:
    point: "50%,50%"
- waitForAnimationToEnd: {}
# 18. Verify widget ASTextField:VerificationEmlpoyement_Input_UserName_Input is displayed on the screen: Verifies that the widget:VerificationEmlpoyement_Input_UserName_Input renders properly and is visible to the user.
- runFlow:
    file: "common/assertVisibleAndWait.yaml"
    env:
      WIDGET_ID: "view-VerificationEmlpoyement_Input_UserName_Input"
- waitForAnimationToEnd: {}
# 19. Verify widget ASTextField:VerificationEmlpoyement_Input_UserName_Input functionalities: Verifies that input widget:VerificationEmlpoyement_Input_UserName_Input accepts valid input, handles long text, and supports special characters.
- runFlow:
    file: "common/scrollUntilVisibleAndWait.yaml"
    env:
      WIDGET_ID: "view-VerificationEmlpoyement_Input_UserName_Input"
- runFlow:
    file: "common/assertVisibleAndWait.yaml"
    env:
      WIDGET_ID: "view-VerificationEmlpoyement_Input_UserName_Input"
- runFlow:
    file: "common/inputTextAndWait.yaml"
    env:
      WIDGET_ID: "textInput-VerificationEmlpoyement_Input_UserName_Input"
      TEXT_VALUE: "test value"
- pressKey: "Enter"
- runFlow:
    file: "common/eraseTextAndWait.yaml"
    env:
      WIDGET_ID: "view-VerificationEmlpoyement_Input_UserName_Input"
- runFlow:
    file: "common/inputTextAndWait.yaml"
    env:
      WIDGET_ID: "textInput-VerificationEmlpoyement_Input_UserName_Input"
      TEXT_VALUE: "test value"
- pressKey: "Enter"
- runFlow:
    file: "common/eraseTextAndWait.yaml"
    env:
      WIDGET_ID: "view-VerificationEmlpoyement_Input_UserName_Input"
- runFlow:
    file: "common/inputTextAndWait.yaml"
    env:
      WIDGET_ID: "textInput-VerificationEmlpoyement_Input_UserName_Input"
      TEXT_VALUE: "test value"
- pressKey: "Enter"
- runFlow:
    file: "common/eraseTextAndWait.yaml"
    env:
      WIDGET_ID: "view-VerificationEmlpoyement_Input_UserName_Input"
- waitForAnimationToEnd: {}
# 20. Verify widget ASImage:VerificationEmlpoyement_Image_GppGood_Image is displayed on the screen: Verifies that the widget:VerificationEmlpoyement_Image_GppGood_Image renders properly and is visible to the user.
- runFlow:
    file: "common/assertVisibleAndWait.yaml"
    env:
      WIDGET_ID: "VerificationEmlpoyement_Image_GppGood_Image"
- waitForAnimationToEnd: {}
# 21. Verify widget ASText:VerificationEmlpoyement_Label_YourDataIsProtectedAccord_Text is displayed on the screen: Verifies that the widget:VerificationEmlpoyement_Label_YourDataIsProtectedAccord_Text renders properly and is visible to the user.
- runFlow:
    file: "common/assertVisibleAndWait.yaml"
    env:
      WIDGET_ID: "VerificationEmlpoyement_Label_YourDataIsProtectedAccord_Text"
- waitForAnimationToEnd: {}
# 22. Verify widget ASText:VerificationEmlpoyement_Label_YourDataIsProtectedAccord_Text is displayed on the screen: Verifies that the label of widget:VerificationEmlpoyement_Label_YourDataIsProtectedAccord_Text appears correctly and is readable.
- runFlow:
    file: "common/scrollUntilVisibleAndWait.yaml"
    env:
      WIDGET_ID: "VerificationEmlpoyement_Label_YourDataIsProtectedAccord_Text"
- runFlow:
    file: "common/assertVisibleAndWait.yaml"
    env:
      WIDGET_ID: "VerificationEmlpoyement_Label_YourDataIsProtectedAccord_Text"
- waitForAnimationToEnd: {}
# 23. Verify widget ASButton:VerificationEmlpoyement_Cta_Continue_Button is displayed on the screen: Verifies that the widget:VerificationEmlpoyement_Cta_Continue_Button renders properly and is visible to the user.
- runFlow:
    file: "common/assertVisibleAndWait.yaml"
    env:
      WIDGET_ID: "button-VerificationEmlpoyement_Cta_Continue_Button"
- waitForAnimationToEnd: {}
# 24. Verify event:onPress using widget ASButton:VerificationEmlpoyement_Cta_Continue_Button in screen VerificationEmlpoyement should navigate to VerificationPurpose: Verify that triggering event:onPress using widget: VerificationEmlpoyement_Cta_Continue_Button in screen VerificationEmlpoyement correctly navigates to the next screen VerificationPurpose with all required fields filled beforehand.
- runFlow:
    file: "common/scrollUntilVisibleAndWait.yaml"
    env:
      WIDGET_ID: "button-VerificationEmlpoyement_Cta_Continue_Button"
- runFlow:
    file: "common/tapAndWait.yaml"
    env:
      WIDGET_ID: "button-VerificationEmlpoyement_Cta_Continue_Button"
- runFlow:
    file: "common/assertScreenVisibleAndWait.yaml"
    env:
      WIDGET_ID: "51dc64b4-0c2b-49e6-b6bd-9dadeb1060f9"
    optional: true
- waitForAnimationToEnd: {}
# 25. Navigate back after verifying event:onPress from ASButton:VerificationEmlpoyement_Cta_Continue_Button: This test case checks if the Navigate back after verifying event:onPress from ASButton:VerificationEmlpoyement_Cta_Continue_Button works correctly.
- runFlow:
    file: "common/backAndWait.yaml"
    env: {}
- waitForAnimationToEnd: {}
